Container query length units use border box instead of a content box https://bugs.webkit.org/show_bug.cgi?id=256178 rdar://problem/108754549

Reviewed by Alan Baradlay.

https://www.w3.org/TR/css-contain-3/#container-query-length:

> For each element, container query length units are evaluated as container size queries on the relevant axis (or axes) described by the unit.

https://www.w3.org/TR/css-contain-3/#container-size-query:

> The width container feature queries the width of the query container’s content box.
> The height container feature queries the height of the query container’s content box.
> The inline-size container feature queries the size of the query container’s content box in the query container’s inline axis.
> The block-size container feature queries the size of the query container’s content box in the query container’s block axis.

* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/container-queries/container-units-content-box-expected.txt: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-contain/container-queries/container-units-content-box.html: Added.
* Source/WebCore/css/CSSPrimitiveValue.cpp:
(WebCore::CSSPrimitiveValue::computeNonCalcLengthDouble):

Resolve the container units against the correct box.

Canonical link: https://commits.webkit.org/263595@main